--- a/.github/workflows/test-performance.yml
+++ b/.github/workflows/test-performance.yml
@@ -1,12 +1,11 @@
 # For more information see:
 # https://pytest-benchmark.readthedocs.io
 
-name: Test Performance
+name: Test performance
 
 on:
-  # TODO: make manual only
-  pull_request:
-    branches: ["*"]
+  push:
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -15,7 +14,7 @@ permissions:
 jobs:
   test:
     name: indicators
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source
@@ -26,7 +25,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.x
+          dotnet-version: 9.x
           dotnet-quality: "ga"
 
       - name: Setup Python
@@ -59,7 +58,7 @@ jobs:
       - name: Publish test results
         run: |
           # Collect system info
-          echo "### Performance Test Results" > report.md
+          echo "### Performance test results" > report.md
           echo "" >> report.md
           echo "**Package version:** ${{ steps.gitversion.outputs.fullSemVer }}" >> report.md
           echo "" >> report.md
