fix: conditionally run perf tests

--- a/.github/workflows/test-performance.yml
+++ b/.github/workflows/test-performance.yml
@@ -6,6 +6,9 @@ name: Test performance
 on:
   push:
     branches: ["main"]
+    paths:
+      - benchmarks/**
+      - .github/workflows/test-performance.yml
   workflow_dispatch:
 
 permissions:
