--- a/.github/workflows/test-localization.yml
+++ b/.github/workflows/test-localization.yml
@@ -17,14 +17,26 @@ jobs:
   localization:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]  # macOS removed due to locale issues
-        locale: [
-          'fr_FR.UTF-8',    # Uses comma as decimal separator
-          'ru_RU.UTF-8'     # Uses comma as decimal, space as thousands
-        ]
-        python-version: ['3.12']
+        include:
+          # Windows tests
+          - os: windows-latest
+            locale: 'fr_FR.UTF-8'
+          - os: windows-latest
+            locale: 'ru_RU.UTF-8'
+            
+          # Ubuntu tests
+          - os: ubuntu-latest
+            locale: 'fr_FR.UTF-8'
+          - os: ubuntu-latest
+            locale: 'ru_RU.UTF-8'
+            
+          # macOS tests
+          - os: macos-latest
+            locale: 'fr_FR.UTF-8'
+          - os: macos-latest
+            locale: 'de_DE.UTF-8'
 
-    name: "Py${{ matrix.python-version }} @ ${{ matrix.locale }} on ${{ matrix.os }}"
+    name: "${{ matrix.locale }} on ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
 
     env:
@@ -40,12 +52,12 @@ jobs:
 
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.x
+          dotnet-version: 9.x
           dotnet-quality: "ga"
 
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.12'
           cache: "pip"
 
       - name: Configure Linux locale
@@ -72,24 +84,59 @@ jobs:
         shell: pwsh
         run: |
           $locale = "${{ matrix.locale }}".Split('.')[0].Replace('_', '-')
-          
+
           # Set system level culture
           Set-WinSystemLocale -SystemLocale $locale
-          
+
           # Set .NET cultures
           [System.Threading.Thread]::CurrentThread.CurrentCulture = [System.Globalization.CultureInfo]::GetCultureInfo($locale)
           [System.Threading.Thread]::CurrentThread.CurrentUICulture = [System.Globalization.CultureInfo]::GetCultureInfo($locale)
-          
+
           # Set default AppContext switch for .NET
           [AppContext]::SetSwitch('System.Globalization.UseNls', $true)
-          
+
           # Set environment variables
           $env:DOTNET_SYSTEM_GLOBALIZATION_INVARIANT = 'false'
           $env:DOTNET_RUNTIME_IDENTIFIER = "win-x64"
-          
+
           # Verify culture settings
           Write-Host "Current Culture: $([System.Threading.Thread]::CurrentThread.CurrentCulture)"
           Write-Host "Current UI Culture: $([System.Threading.Thread]::CurrentThread.CurrentUICulture)"
+
+      - name: Configure macOS locale
+        if: runner.os == 'macOS'
+        run: |
+          # List available locales
+          locale -a
+
+          # Try to set the locale
+          export LANG=${{ matrix.locale }}
+          export LC_ALL=${{ matrix.locale }}
+
+          # Verify locale
+          locale
+
+          # Configure .NET culture (similar to Windows approach)
+          dotnet run --project <(cat <<EOF
+          using System;
+          using System.Globalization;
+          using System.Threading;
+
+          class Program {
+              static void Main() {
+                  var locale = "${{ matrix.locale }}".Split('.')[0].Replace("_", "-");
+                  try {
+                      var culture = new CultureInfo(locale);
+                      Thread.CurrentThread.CurrentCulture = culture;
+                      Thread.CurrentThread.CurrentUICulture = culture;
+                      Console.WriteLine($"Set culture to: {culture.Name}");
+                  } catch (Exception e) {
+                      Console.WriteLine($"Failed to set culture: {e.Message}");
+                  }
+              }
+          }
+          EOF
+          )
 
       - name: Install dependencies
         run: |
