temp: include all branches in full matrix

--- a/.github/workflows/test-indicators-full.yml
+++ b/.github/workflows/test-indicators-full.yml
@@ -5,7 +5,7 @@ name: Unit tests (full matrix)
 
 on:
   push:
-    branches: ["main"]
+    branches: ["*"]
     paths:
       - .github/workflows/test-indicators-full.yml
   workflow_dispatch:
