consistency updates to workflows

--- a/.github/workflows/test-code-coverage.yml
+++ b/.github/workflows/test-code-coverage.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.x
-          dotnet-quality: "ga"
+          dotnet-version: 9.x
+          dotnet-quality: ga
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -36,6 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -u --upgrade-strategy=only-if-needed pip
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
