--- a/.github/workflows/test-localization.yml
+++ b/.github/workflows/test-localization.yml
@@ -53,11 +53,11 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.x
-          dotnet-quality: "ga"
+          dotnet-quality: ga
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: 3.12
           cache: "pip"
 
       - name: Configure Linux locale
@@ -160,6 +160,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -u --upgrade-strategy=only-if-needed pip
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
