--- a/.github/workflows/test-performance.yml
+++ b/.github/workflows/test-performance.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.x
-          dotnet-quality: "ga"
+          dotnet-quality: ga
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -40,7 +40,7 @@ jobs:
       - name: Setup GitVersion
         uses: gittools/actions/gitversion/setup@v3.1.1
         with:
-          versionSpec: '6.0.5'
+          versionSpec: 6.0.5
 
       - name: Execute GitVersion
         id: gitversion
@@ -48,6 +48,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install -u --upgrade-strategy=only-if-needed pip
           pip install -r requirements.txt
           pip install -r requirements-test.txt
 
