--- a/.github/workflows/test-indicators-full.yml
+++ b/.github/workflows/test-indicators-full.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches: ["*"]  # temp
     paths:
+      - stock_indicators/**
       - .github/workflows/test-indicators-full.yml
   workflow_dispatch:
 
