--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Suggest an idea for this project.
-labels: ["enhancement"]
+type: ["feature"]
 body:
   - type: markdown
     attributes:
