fix typo in tasks.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,10 @@
 {
-  "editor.codeActionsOnSave": {
-    "source.fixAll": "always",                // default: "never"
-    "source.organizeImports": "always"        // default: "never"
-  },
-  "editor.formatOnSave": true,                // default: false
-  "isort.args": ["--profile", "black"],
+  "isort.args": [
+    "--profile",
+    "black"
+  ],
   "isort.check": true,
   "isort.importStrategy": "fromEnvironment",  // default: "useBundled"
-  "pylint.importStrategy": "fromEnvironment", // default: "useBundled"
-
-  "[markdown]": {
-    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
-    "files.trimTrailingWhitespace": true
-  },
   "markdownlint.config": {
     "default": true,          // Enable all default rules
     "MD013": false,           // Disable line length checking entirely
@@ -26,7 +18,16 @@
     },
     "MD041": false            // Allow content before first heading
   },
-
+  "pylint.importStrategy": "fromEnvironment", // default: "useBundled"
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "[markdown]": {
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
+    "files.trimTrailingWhitespace": true
+  },
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   }
