--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check debug settings
-        if: ${{ matrix.post-summary }} == 'true'
+        if: ${{ matrix['post-summary'] == true }}
         shell: bash
         run: |
           echo "Checking for debug logging settings in package files..."
@@ -101,6 +101,6 @@ jobs:
 
       - name: Post test summary
         uses: test-summary/action@v2
-        if: ${{ matrix.post-summary }} == 'true'
+        if: ${{ matrix['post-summary'] == true }}
         with:
           paths: test-results.xml
