--- a/.github/workflows/test-indicators.yml
+++ b/.github/workflows/test-indicators.yml
@@ -21,13 +21,13 @@ jobs:
         include:
 
           # oldest combinations
-          - os: macos-13
+          - os: macos-14
             dotnet-version: "6.x"
             python-version: "3.8"
           - os: ubuntu-22.04
             dotnet-version: "6.x"
             python-version: "3.8"
-          - os: windows-2019
+          - os: windows-2022
             dotnet-version: "6.x"
             python-version: "3.8"
 
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check debug settings
-        if: ${{ matrix.post-summary }} == 'true'
+        if: ${{ matrix['post-summary'] == true }}
         shell: bash
         run: |
           echo "Checking for debug logging settings in package files..."
@@ -100,7 +100,7 @@ jobs:
         continue-on-error: true
 
       - name: Post test summary
+        if: ${{ always() && matrix['post-summary'] == true }}
         uses: test-summary/action@v2
-        if: ${{ matrix.post-summary }} == 'true'
         with:
           paths: test-results.xml
