--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,6 +42,12 @@
       "command": "pytest --cov=stock_indicators --cov-report=term-missing",
       "group": "none",
       "problemMatcher": []
+    },
+    {
+      "label": "build",
+      "type": "shell",
+      "command": "pip install -r requirements.txt && pip install -r requirements-test.txt",
+      "group": "build"
     }
   ]
 }
