--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -28,15 +28,13 @@ jobs:
 
     steps:
       - name: Checkout source
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.3
-
-      - name: Install dependencies
-        run: bundle install
+          bundler-cache: true # runs 'bundle install' and caches gems
 
       - name: Define tag
         id: tag
