--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,4 @@
 source 'https://rubygems.org'
-# Run Task: "Doc Site: Open with LiveReload"
 
 # jekyll plugins
 group :jekyll_plugins do
@@ -12,6 +11,9 @@ group :jekyll_plugins do
   gem 'jekyll-minifier'
 end
 
-gem 'wdm', '>= 0.2.0' # windows compatibility pack
-gem 'webrick'         # needed for ruby > v3.0
-gem 'faraday'         # reload/retry on file changes
+platforms :mingw, :mswin, :x64_mingw, :jruby do
+  gem 'wdm', '>= 0.2.0' # windows compatibility pack
+end
+
+gem 'webrick'           # needed for ruby > v3.0
+gem 'faraday'           # reload/retry on file changes
