--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,7 +11,7 @@ group :jekyll_plugins do
   gem 'jekyll-minifier'
 end
 
-platforms :mingw, :mswin, :x64_mingw, :jruby do
+platforms :mingw, :mswin, :x64_mingw do
   gem 'wdm', '>= 0.2.0' # windows compatibility pack
 end
 
